fixed footer and register/signin alignment

--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,4 +1,22 @@
 .credits {
-   color: rgb(195, 195, 195);
-   font-size: 1rem;
+  bottom: 0;
+  color: rgb(195, 195, 195);
+  font-size: 1.25rem;
+  position: absolute;;
+  width: 100%;
+}
+
+a {
+  color: rgb(200, 200, 200);
+  font-weight: bold;
+  padding: 0 0.5rem;
+}
+
+
+a:visited {
+  color: rgb(205, 209, 16);
+}
+
+a:hover {
+  color: black;
 }
