--- a/src/styles/SignIn.css
+++ b/src/styles/SignIn.css
@@ -18,8 +18,6 @@ main {
    flex-direction: column;
    height: 500px;
    justify-content: center;
-   margin: 0 25%;
-   position: fixed;
    width: 500px;
 }
 
